<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:src="@color/purple_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="@string/name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/circleImageView"
            app:layout_constraintStart_toStartOf="@+id/circleImageView"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

        <TextView
            android:id="@+id/username_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/username"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/name_detail"
            app:layout_constraintStart_toStartOf="@+id/name_detail"
            app:layout_constraintTop_toBottomOf="@+id/name_detail" />

        <TextView
            android:id="@+id/location_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:drawablePadding="5dp"
            tools:text="@string/location"
            android:textSize="14sp"
            android:textColor="@color/grey_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_detail"
            app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />
        <TextView
            android:id="@+id/company_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawablePadding="5dp"
            tools:text="Google Inc"
            android:textSize="14sp"
            android:textColor="@color/grey_text"
            app:layout_constraintStart_toStartOf="@+id/location_detail"
            app:layout_constraintTop_toBottomOf="@+id/location_detail"
            app:drawableStartCompat="@drawable/ic_baseline_apartment_24" />

        <TextView
            android:id="@+id/repos_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            tools:text="@string/score"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/company_detail"
            app:layout_constraintTop_toBottomOf="@+id/company_detail" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/repository"
            android:textSize="14sp"
            android:textColor="@color/grey_text"
            app:layout_constraintBottom_toBottomOf="@+id/repos_detail"
            app:layout_constraintStart_toEndOf="@+id/repos_detail"
            app:layout_constraintTop_toTopOf="@+id/repos_detail" />

        <TextView
            android:id="@+id/followers_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            tools:text="@string/score"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/followers"
            android:textColor="@color/grey_text"
            app:layout_constraintBottom_toBottomOf="@+id/followers_detail"
            app:layout_constraintStart_toEndOf="@+id/followers_detail"
            app:layout_constraintTop_toTopOf="@+id/followers_detail" />

        <TextView
            android:id="@+id/following_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            tools:text="@string/score"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/following"
            android:textColor="@color/grey_text"
            app:layout_constraintBottom_toBottomOf="@+id/following_detail"
            app:layout_constraintStart_toEndOf="@+id/following_detail"
            app:layout_constraintTop_toTopOf="@+id/following_detail" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/bg_tab"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/followers_detail"
            app:tabIndicatorColor="@color/bg_indi"
            app:tabTextColor="@color/white"
            app:tabSelectedTextColor="@color/bg_indi"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBarDetail"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/grey_text"
            app:borderWidth="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_favorite_border_24"
            android:contentDescription="@string/favorite" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>